--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="no-cursor">
+  <nav id="navigation">
+    <a href="/facts">facts</a>
+  </nav>
   <section id="app">
     <button id="enter" name="enter"></button>
     <span class="tracer tracer--cursor">
