--- a/facts/index.html
+++ b/facts/index.html
@@ -7,12 +7,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Ben Teichman - Facts</title>
   <link rel="stylesheet" href="https://yarnpkg.com/en/package/normalize.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
   <section id="app" class="v-centered">
-    <p class="main-text">coming soon...</p>
+    <ul class="main-text">
+      <li><b>skills:</b> computer</li>
+      <li><b>age:</b> almost 27</li>
+      <li><b>sad:</b> what is emotion?</li>
+    </ul>
   </section>
 </body>
 
